# Hackathon2-todo-cli-app

./: .gitignore  README.md
.claude/skills/better-auth-authentication/: SKILL.md
.claude/skills/better-auth-authorization/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.claude/skills/fastapi/templates/professional/: .env.example  README.md  pyproject.toml
.claude/skills/fastapi/templates/professional/app/: __init__.py  config.py  database.py  main.py
.claude/skills/fastapi/templates/professional/app/core/: security.py
.claude/skills/fastapi/templates/professional/app/crud/: __init__.py  item.py  user.py
.claude/skills/fastapi/templates/professional/app/models/: __init__.py  item.py  user.py
.claude/skills/fastapi/templates/professional/app/routers/: __init__.py  auth.py  items.py  users.py
.claude/skills/fastapi/templates/professional/app/schemas/: __init__.py  item.py  token.py  user.py
.claude/skills/fastapi/templates/standard/: crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
.claude/skills/fastapi/templates/standard/routers/: __init__.py  items.py  users.py
.specify/memory/: constitution.md
cli-todo-app/: pyproject.toml
cli-todo-app/src/: main.py
cli-todo-app/src/cli/: __init__.py
cli-todo-app/src/exceptions/: errors.py
cli-todo-app/src/models/: status.py  todo.py
cli-todo-app/src/services/: todo_service.py
cli-todo-app/src/store/: __init__.py  todo_store.py
cli-todo-app/src/utils/: validators.py
cli-todo-app/tests/: __init__.py  conftest.py
cli-todo-app/tests/unit/: test_service.py  test_store.py
fullstack-todo-app/: README.md  docker-compose.prod.yml  docker-compose.yml
fullstack-todo-app/.github/workflows/: ci.yml
fullstack-todo-app/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
fullstack-todo-app/backend/alembic/: env.py
fullstack-todo-app/backend/alembic/versions/: 001_initial_schema.py
fullstack-todo-app/backend/app/: __init__.py  config.py  dependencies.py  main.py
fullstack-todo-app/backend/app/api/v1/: auth.py  health.py  router.py  todos.py  users.py
fullstack-todo-app/backend/app/db/: base.py  engine.py
fullstack-todo-app/backend/app/middleware/: error_handler.py  security_headers.py
fullstack-todo-app/backend/app/models/: __init__.py  enums.py  schemas.py  todo.py  user.py
fullstack-todo-app/backend/app/security/: __init__.py  jwt.py  password.py
fullstack-todo-app/backend/app/services/: __init__.py  auth_service.py  todo_service.py  user_service.py
fullstack-todo-app/backend/app/utils/: auto_tags.py  exceptions.py  logger.py
fullstack-todo-app/backend/tests/: conftest.py
fullstack-todo-app/backend/tests/integration/: test_auth_api.py  test_health.py  test_todos_api.py  test_user_isolation.py  test_users_api.py
fullstack-todo-app/backend/tests/unit/: test_auth_service.py  test_security.py  test_todo_service.py  test_user_service.py
fullstack-todo-app/frontend/: .env.example  Dockerfile  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
fullstack-todo-app/frontend/app/: layout.tsx  page.tsx
fullstack-todo-app/frontend/context/: AuthContext.tsx  ThemeContext.tsx
fullstack-todo-app/frontend/e2e/: auth.spec.ts  filtering.spec.ts  profile.spec.ts  todos.spec.ts
fullstack-todo-app/frontend/hooks/: useTodos.ts
fullstack-todo-app/frontend/lib/: auth.ts  theme.ts  utils.ts  validators.ts
fullstack-todo-app/frontend/services/: api.ts  auth.service.ts  todo.service.ts  (+1 more)
specs/001-console-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-fullstack-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/cli/: commands.py  formatters.py  parser.py
src/exceptions/: __init__.py
src/models/: __init__.py
src/services/: __init__.py
src/utils/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_models.py  test_validators.py
(+54 files in other folders)
