[project]
name = "fastapi-professional"
version = "1.0.0"
description = "Production-ready FastAPI application"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
    "fastapi[standard]>=0.109.0",
    "gunicorn>=21.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Configuration
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
