[project]
name = "fastapi-standard"
version = "0.1.0"
description = "Standard FastAPI application with database"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "sqlalchemy>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]
